infra/prometheus/templates/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: alertmanager.home.kevinbreit.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
  tls:
    - hosts:
        - alertmanager.home.kevinbreit.net
      secretName: alertmanager-cert
